fix timeline badge height and alignment

--- a/css/includes/components/itilobject/_timeline.scss
+++ b/css/includes/components/itilobject/_timeline.scss
@@ -38,7 +38,6 @@
 
         .creator {
             .badge {
-                height: inherit;
                 background-color: $timeline-badge-bg;
                 color: $timeline-badge-fg;
 
